# MRASM

./: Cargo.toml  README.md  build.rs
corpus/: aarch64.tsv
crates/mackb/: Cargo.toml
crates/mackb/src/: lib.rs
src/: backend.rs  coff.rs  difftest.rs  lib.rs  llvm.rs  macho.rs  macho_exe.rs  oracle.rs  pe.rs
src/a64/: encode.rs  mod.rs  parse.rs
src/difftest/: aarch64.rs
tests/: a64_smoke.rs  macho_exe_run42.rs  macho_run42.rs
