[workspace]
# MRASM (macOS arm64 port): `studio` is dropped from the workspace entirely for
# now — it path-deps WF66's `docpane` (a Direct2D/DirectWrite render core) and
# `doccrate/rust-tcl`, both Windows-only. The Mac IDE shell will be re-added once
# a macOS render core (the WF66->MF66 / MacNCL line) is wired up. See mrasm-port.
members = [".", "crates/winkb", "crates/was", "crates/ide"]
default-members = [".", "crates/winkb", "crates/was", "crates/ide"]
resolver = "2"

[package]
name = "rasm"
version = "0.1.0"
edition = "2021"
description = "From-scratch x86-64 machine-code encoder (Intel-syntax text in, bytes out), byte-identical to LLVM-MC. No LLVM, no JIT."
license = "MIT"

[[bin]]
name = "rasm-as"
path = "src/bin/rasm_as.rs"

[features]
# The AArch64 encoder's `oracle_diff` gate (src/a64) compares byte-for-byte
# against an LLVM-MC oracle, exactly like the x86 corpus was built. The oracle
# module is not yet ported into MRASM, so this feature is a declared placeholder
# (silences the cfg warning) — enabling it will not compile until the oracle and
# AArch64 corpus land. See mrasm-port.
llvm = []

[dependencies]
anyhow = "1"

[dev-dependencies]
# Decoder-only — the round-trip oracle for the encoder's unit tests
# (encode -> decode -> assert the intended instruction). NOT a runtime dep.
iced-x86 = { version = "1", default-features = false, features = ["std", "decoder", "instr_info", "intel"] }

[profile.release]
lto = "thin"
