[workspace]
# MRASM (macOS arm64 port): `studio` is dropped from the workspace entirely for
# now — it path-deps WF66's `docpane` (a Direct2D/DirectWrite render core) and
# `doccrate/rust-tcl`, both Windows-only. The Mac IDE shell will be re-added once
# a macOS render core (the WF66->MF66 / MacNCL line) is wired up. See mrasm-port.
members = [".", "crates/winkb", "crates/was", "crates/ide", "crates/mackb"]
default-members = [".", "crates/winkb", "crates/was", "crates/ide", "crates/mackb"]
resolver = "2"

[package]
name = "rasm"
version = "0.1.0"
edition = "2021"
description = "From-scratch x86-64 machine-code encoder (Intel-syntax text in, bytes out), byte-identical to LLVM-MC. No LLVM, no JIT."
license = "MIT"

[[bin]]
name = "rasm-as"
path = "src/bin/rasm_as.rs"

[[bin]]
name = "a64-corpus"
path = "src/bin/a64_corpus.rs"
required-features = ["llvm"]

[features]
# NATIVE IS THE DEFAULT — a plain build has NO LLVM-C dependency. `llvm` (opt-in)
# links LLVM-C and compiles the LLVM-MC differential oracle (src/llvm.rs,
# src/oracle.rs) that keeps RasmEncoder/A64Encoder byte-honest; it is a
# build/test-time tool only (`a64::oracle_diff`, `oracle::tests`, the
# `a64-corpus` corpus-regen bin), nothing on the shipping native path.
llvm = ["dep:object"]

[dependencies]
anyhow = "1"
# Parses the relocatable object LLVM-MC emits for the differential oracle
# (`src/oracle.rs`) into an `EncodedModule`. COFF (x86) + Mach-O (AArch64).
# Optional — pulled in only by the `llvm` feature.
object = { version = "0.36", optional = true, default-features = false, features = ["read_core", "coff", "elf", "macho", "std"] }
sha2 = "0.11.0"

[dev-dependencies]
# Decoder-only — the round-trip oracle for the encoder's unit tests
# (encode -> decode -> assert the intended instruction). NOT a runtime dep.
iced-x86 = { version = "1", default-features = false, features = ["std", "decoder", "instr_info", "intel"] }

[profile.release]
lto = "thin"
